[gd_scene load_steps=12 format=3 uid="uid://cmlbi7t5xiiya"]

[ext_resource type="Script" uid="uid://cdksadgf5onau" path="res://assets/overview/game_over/game_over.gd" id="1_2myse"]
[ext_resource type="FontFile" uid="uid://c6fal4glk34ky" path="res://assets/portatil/Merriweather_36pt-Bold.ttf" id="1_uel1k"]
[ext_resource type="Script" uid="uid://dppr32xp2wbag" path="res://src/computer/rich_text_good.gd" id="2_2myse"]
[ext_resource type="Script" uid="uid://b2b2n7mv7oe84" path="res://src/computer/rich_text_bad.gd" id="3_d01fm"]
[ext_resource type="Texture2D" uid="uid://d4iftvjhodss1" path="res://assets/overview/game_over/mainmenu.png" id="5_d01fm"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_slhmv"]
load_path = "res://.godot/imported/Plain Paper UI SpriteSheet.png-87da19a0bca9fdccb0c944a4f04f03c9.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_kva84"]
atlas = SubResource("CompressedTexture2D_slhmv")
region = Rect2(880, 2288, 768, 528)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_lyo7j"]
load_path = "res://.godot/imported/Plain Paper UI SpriteSheet.png-87da19a0bca9fdccb0c944a4f04f03c9.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_dxge7"]
atlas = SubResource("CompressedTexture2D_lyo7j")
region = Rect2(49, 780, 621, 503)

[sub_resource type="RichTextEffect" id="RichTextEffect_x0hv8"]
script = ExtResource("2_2myse")
metadata/_custom_type_script = "uid://dppr32xp2wbag"

[sub_resource type="RichTextEffect" id="RichTextEffect_mjgqc"]
script = ExtResource("3_d01fm")
metadata/_custom_type_script = "uid://b2b2n7mv7oe84"

[node name="GameOver" type="Node2D"]
script = ExtResource("1_2myse")

[node name="Table" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_right = 1152.0
offset_bottom = 649.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_kva84")

[node name="News" type="TextureRect" parent="Table"]
layout_mode = 0
offset_left = 309.0
offset_top = 631.0
offset_right = 930.0
offset_bottom = 1134.0
rotation = -1.5707964
texture = SubResource("AtlasTexture_dxge7")
stretch_mode = 5

[node name="GameOver" type="RichTextLabel" parent="Table/News"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 588.0
offset_top = 81.00003
offset_right = 984.0
offset_bottom = 358.00003
rotation = 1.5707964
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_colors/default_color = Color(0.7397895, 1.9372628e-06, 9.62615e-07, 1)
theme_override_fonts/normal_font = ExtResource("1_uel1k")
theme_override_fonts/bold_font = ExtResource("1_uel1k")
theme_override_font_sizes/normal_font_size = 53
theme_override_font_sizes/bold_font_size = 30
bbcode_enabled = true
text = "GAME OVER"
scroll_active = false
shortcut_keys_enabled = false
custom_effects = [SubResource("RichTextEffect_x0hv8"), SubResource("RichTextEffect_mjgqc")]

[node name="VBoxContainer" type="VBoxContainer" parent="Table/News"]
layout_mode = 0
offset_left = 515.0
offset_top = 48.000023
offset_right = 919.0
offset_bottom = 450.00006
rotation = 1.5707964

[node name="Earnings" type="RichTextLabel" parent="Table/News/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("1_uel1k")
theme_override_font_sizes/normal_font_size = 24
text = "Total Earnings ........................ 1000€
"
fit_content = true

[node name="Expenses" type="RichTextLabel" parent="Table/News/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("1_uel1k")
theme_override_font_sizes/normal_font_size = 24
text = "Total Expenses ........................ 1000€"
fit_content = true

[node name="Score" type="RichTextLabel" parent="Table/News/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("1_uel1k")
theme_override_font_sizes/normal_font_size = 24
text = "Total Score: 20000"
fit_content = true

[node name="GoodGuys" type="RichTextLabel" parent="Table/News/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("1_uel1k")
theme_override_font_sizes/normal_font_size = 24
text = "Innocent citizens killed: 0
"
fit_content = true

[node name="BadGuys" type="RichTextLabel" parent="Table/News/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("1_uel1k")
theme_override_font_sizes/normal_font_size = 24
text = "Corrupt leaders defeated: 0
"
fit_content = true

[node name="Losses" type="RichTextLabel" parent="Table/News/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("1_uel1k")
theme_override_font_sizes/normal_font_size = 24
text = "Arguments lost: 0
"
fit_content = true

[node name="Thanks" type="RichTextLabel" parent="Table/News/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("1_uel1k")
theme_override_font_sizes/normal_font_size = 24
text = "






                Thanks for playing!"
fit_content = true

[node name="MainMenu" type="TextureButton" parent="Table"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 884.0
offset_top = 507.0
offset_right = 1117.0
offset_bottom = 626.0
texture_normal = ExtResource("5_d01fm")

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="Table/MainMenu" to="." method="_on_texture_button_pressed"]
